# rusty-runner

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
assets/levels/: level-1-1.tmx  level-1-10.tmx  level-1-2.tmx  level-1-3.tmx  level-1-4.tmx  level-1-5.tmx  level-1-6.tmx  level-1-7.tmx  level-1-8.tmx  level-1-9.tmx  test-level.tmx
assets/tilesets/: world1.tsx
crates/game_ai/: Cargo.toml
crates/game_ai/src/: bot.rs  lib.rs  metrics.rs  pathfind.rs  replay.rs  world_state.rs
crates/game_ai/tests/: bot_test.rs  headless_gameplay_test.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: boss.rs  collision.rs  enemy.rs  input.rs  items.rs  level.rs  lib.rs  physics.rs  platforms.rs  player.rs  save.rs  state.rs  wind.rs
crates/game_core/tests/: enemy_test.rs  full_plugin_test.rs  input_test.rs  player_test.rs  state_fuzz_test.rs  state_test.rs
crates/game_core/tests/common/: mod.rs
crates/game_render/: Cargo.toml
crates/game_render/src/: audio.rs  camera.rs  hud.rs  lib.rs  menus.rs  sprites.rs
scripts/: screenshot_test.sh
