[workspace]
resolver = "2"
members = [
    "crates/game_core",
    "crates/game_render",
    "crates/game_ai",
]

[workspace.dependencies]
bevy = "0.18"
avian2d = "0.6"
bevy_ecs_tiled = "0.11"
bevy-tnua = "0.30"
bevy-tnua-avian2d = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[package]
name = "rusty-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
game_core = { path = "crates/game_core" }
game_render = { path = "crates/game_render" }
game_ai = { path = "crates/game_ai" }
bevy = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "game"
path = "src/bin/game.rs"

[[bin]]
name = "ai_runner"
path = "src/bin/ai_runner.rs"

[[bin]]
name = "level_test"
path = "src/bin/level_test.rs"
