[package]
name = "game_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
avian2d = { workspace = true }
bevy_ecs_tiled = { workspace = true }
bevy-tnua = { workspace = true }
bevy-tnua-avian2d = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
